mobile menu started

--- a/index.html
+++ b/index.html
@@ -169,9 +169,50 @@
     <div class="dropdown-desktop" id="desktop-resources"></div>
 </div>
 <div class="mobile-header">
-
+    <div class="mobile-wrapper">   
+    <button class="hamburger-menu">☰</button>
+        <img
+        class="logo"
+        src="./images/LincolnElectric-Logo.svg"
+        alt="Lincoln-Electric"
+        />
+        </div>
+        <ul class="icons-wrapper">
+            <li>
+                <a class="icon" href="#">
+                    <img src="./images/search.svg" alt="search" />
+                  </a>
+            </li>
+            <li>
+                <a class="icon" href="#">
+                    <img src="./images/profile-mobile.svg" alt="profile" />
+                  </a>
+            </li>
+            <li class="shopping-cart">
+                <a href="#">
+                  <img
+                    class="shopping-cart__icon"
+                    src="./images/shopping-cart-mobile.svg"
+                    alt="shopping-cart"
+                    />
+                </a>
+                    <p class="items-number">3</p>
+                  
+            </li>
+        </ul>
 </div> 
     </header>
+    <body>
+        <div class="hero-section">
+        <img class="hero-image" src="./images/mobile-hero-image.jpg">
+        <div class="hero-overlay">
+            <div class="hero-text">
+                <h1 class="hero-title">Welding Equipment</h1>
+                <p class="hero-description">Welding equipment description goes right here, lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+        </div>
+        </div>
+    </body>
     <script src="./index.js"></script>
   </body>
 </html>
