mobile body updated

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </ul>
 </div> 
     </header>
-    <body>
+    <div class="body">
         <div class="hero-section">
         <img class="hero-image" src="./images/mobile-hero-image.jpg">
         <div class="hero-overlay">
@@ -212,7 +212,23 @@
             </div>
         </div>
         </div>
-    </body>
+        <div class="equipment-wrapper">
+          <button class="back-button">
+            <img src="./images/mobile-back-arrow.svg">
+          </button>
+          <p class="equipment">Equipment</p>
+        </div>
+        <h3 class="introducing">Introducing</h3>
+        <h2 class="body-title">The All New PIPEFAB™ Welding System</h2>
+        <p class="body-description">A next generation welding solution that redefines simplicity and performance in pipe and vessel fabrication. Groundbreaking root-to-cap arc performance, industry-driven simplicity, and unrivaled industry support.</p>
+        <div class="learn-more-wrapper">
+          <p class="learn-more">Learn More</p>
+          <button class="red-arrow">
+            <img src="./images/red-arrow.svg">
+          </button>
+        </div>
+        <img class="video-screenshot" src="./images/video-screenshot.png">
+        </div>
     <script src="./index.js"></script>
   </body>
 </html>
