mobile menu built

--- a/index.html
+++ b/index.html
@@ -200,7 +200,76 @@
                   
             </li>
         </ul>
-</div> 
+      </div> 
+      <div class="mobile-menu">
+        <div class="menu-background">
+          <h3 class="menu-text">Menu</h3>
+          <button class="close-button">
+            <img src="./images/close-button-mobile.svg">
+          </button>
+        </div>
+        <nav>
+          <ul>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Solutions</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Products</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Automation</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Education</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Resources</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+          </ul>
+          <ul class="menu-bottom">
+            <li>
+              <a class="menu-bottom-link" href="#">
+              <img src="./images/mobile-q.svg">
+              <p class="menu-bottom-link__text">Help</p>
+                <img src="./images/menu-arrow-bottom.svg">
+              </a>
+            </li>
+            <li>
+              <a class="menu-bottom-link" href="#">
+              <img src="./images/mobile-location.svg">
+              <p class="menu-bottom-link__text">Where to Buy/Rent</p>
+            </a>
+            </li>
+            <li>
+              <a class="menu-bottom-link" href="#">
+              <img src="./images/mobile-shield.svg">
+              <p class="menu-bottom-link__text">Safety</p>
+              </a>
+            </li>
+          </ul>
+          <div>
+            <a class="menu-bottom-link">
+            <img src="./images/US-flag.svg">
+            <p class="flag-text">EN</p>
+          </a>
+          </div>
+        </nav>
+      </div>
     </header>
     <div class="body">
         <div class="hero-section">
