solutions tab updated

--- a/index.html
+++ b/index.html
@@ -208,40 +208,41 @@
             <img src="./images/close-button-mobile.svg">
           </button>
         </div>
-        <nav>
+        <nav id="mobile-main">
           <ul>
             <li class="menu-tab">
-              <a class="menu-link" href="#">
+              <a class="menu-link" id="mobile-tab-solutions" href="#">
                 <p class="menu-link__text">Solutions</p>
                 <img src="./images/menu-arrow-top.svg">
               </a>
             </li>
             <li class="menu-tab">
-              <a class="menu-link" href="#">
+              <a class="menu-link" id="mobile-tab-products" href="#">
                 <p class="menu-link__text">Products</p>
                 <img src="./images/menu-arrow-top.svg">
               </a>
             </li>
             <li class="menu-tab">
-              <a class="menu-link" href="#">
+              <a class="menu-link" id="mobile-tab-automation" href="#">
                 <p class="menu-link__text">Automation</p>
                 <img src="./images/menu-arrow-top.svg">
               </a>
             </li>
             <li class="menu-tab">
-              <a class="menu-link" href="#">
+              <a class="menu-link" id="mobile-tab-education" href="#">
                 <p class="menu-link__text">Education</p>
                 <img src="./images/menu-arrow-top.svg">
               </a>
             </li>
             <li class="menu-tab">
-              <a class="menu-link" href="#">
+              <a class="menu-link" id="mobile-tab-resources" href="#">
                 <p class="menu-link__text">Resources</p>
                 <img src="./images/menu-arrow-top.svg">
               </a>
             </li>
           </ul>
-          <ul class="menu-bottom">
+          <div class="menu-bottom">
+          <ul>
             <li>
               <a class="menu-bottom-link" href="#">
               <img src="./images/mobile-q.svg">
@@ -262,12 +263,46 @@
               </a>
             </li>
           </ul>
-          <div>
             <a class="menu-bottom-link">
             <img src="./images/US-flag.svg">
             <p class="flag-text">EN</p>
           </a>
           </div>
+        </nav>
+      </div>
+        <nav id="mobile-solutions">
+          <ul>
+            <li class="menu-tab">
+              <a class="menu-link" id="go-back" href="#">
+                <img src="./images/mobile-tab-back-arrow.svg">
+                <p class="menu-link__text" id="go-back__text">Go Back</p>
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Solutions by Industry</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Solutions by Process</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Software Solutions</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Services</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
