--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <nav id="mobile-solutions">
           <ul>
             <li class="menu-tab">
-              <a class="menu-link" id="go-back" href="#">
+              <a class="menu-link" id="go-back-solutions" href="#">
                 <img src="./images/mobile-tab-back-arrow.svg">
                 <p class="menu-link__text" id="go-back__text">Go Back</p>
               </a>
@@ -304,7 +304,58 @@
             </li>
           </ul>
         </nav>
-      </div>
+        <nav id="mobile-products">
+          <ul>
+            <li class="menu-tab">
+              <a class="menu-link" id="go-back-products" href="#">
+                <img src="./images/mobile-tab-back-arrow.svg">
+                <p class="menu-link__text" id="go-back__text">Go Back</p>
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Equipment</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Consumables</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Safety</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">New Products</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Promotions</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Browse by Brand</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+            <li class="menu-tab">
+              <a class="menu-link" href="#">
+                <p class="menu-link__text">Browse by Industry</p>
+                <img src="./images/menu-arrow-top.svg">
+              </a>
+            </li>
+          </ul>
+        </nav>
     </header>
     <div class="body">
         <div class="hero-section">
